applications/oauth2-proxy-traefik/middleware-auth-headers.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: auth-headers-traefik
  namespace: traefik
spec:
  headers:
    browserXssFilter: true
    contentTypeNosniff: true
    forceSTSHeader: true
    frameDeny: true
    sslHost: thegraveshouse.com
    sslRedirect: true
    stsIncludeSubdomains: true
    stsPreload: true
    stsSeconds: 315360000
