applications/oauth2-proxy-traefik/middleware-oauth-redirect.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: traefik-oauth-redirect
  namespace: traefik
spec:
  forwardAuth:
    address: http://traefik-oauth2-proxy.traefik.svc.cluster.local:80
    authResponseHeaders:
    - X-Auth-Request-Access-Token
    - Authorization
    maxBodySize: 1048576
    maxResponseBodySize: 1048576
    trustForwardHeader: true
